# notes

./: .gitignore
c/readings/: pointers-on-c.md
cmake/: README.md
cmake/example-library/: CMakeLists.txt  main.cpp
cmake/example-library/mymath/: CMakeLists.txt  mymath.cpp
cmake/example-library/opt/include/: mymath.h
cmake/example-prevar/: CMakeLists.txt
cmake/example-project/: CMakeLists.txt  Tutorial.cpp  TutorialConfig.h.in
design_patterns/: README.md
design_patterns/test_codes/singleton_cpp/: main.cpp
embedded/: freertos.md
miscellaneous/: tmux.md
ml/hands_on_ml/chapter2/: chap2.ipynb
ml/pylib/numpy/: Linear_Algebra_On_N_Dimensional_Arrays.ipynb  Saving_And_Sharing_Your_NumPy_Arrays.ipynb
ml/pylib/numpy/.ipynb_checkpoints/: Linear_Algebra_On_N_Dimensional_Arrays-checkpoint.ipynb
python/: fluent_python.md
python/noteboook/: Fluent Python.ipynb
regular_expression/: README.md
